--- a/index.html
+++ b/index.html
@@ -7,25 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Bubble Effect</title>
   </head>
-  <body>
-    <nav>
-      <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Projects</a></li>
-      </ul>
-    </nav>
-
-    <section class="landing">
-      <img src="./circles.svg" alt="dots" />
-      <h1>Dots</h1>
-    </section>
-
+  <body>]
     <script src="app.js"></script>
   </body>
 </html>
